[project]
name = "tasktracker"
version = "0.1.0"
description = "A simple command-line task tracker"
requires-python = ">=3.9"

[project.scripts]
tasktracker = "tasktracker.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tasktracker*"]
